force-app/main/default/objects/Entity__c/fields/Document_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Entity_Name__c</fullName>
    <formula>IF( RIGHT( Name ,  LEN(Name)- (LEN(Name)-1) )  = &apos;s&apos;, Name + &quot;&apos;&quot;, Name + &quot;&apos;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Entity Name</label>
    <type>Text</type>
</CustomField>