force-app/main/default/objects/Entity__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <label>Entity Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>