force-app/main/default/objects/Entity__c/fields/Full_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Entity_Name__c</fullName>
    <label>Full Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>