force-app/main/default/objects/Entity__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <label>Project Id</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>