force-app/main/default/objects/Entity__c/fields/Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Id__c</fullName>
    <label>Provider Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>