force-app/main/default/objects/Entity__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Type</label>
    <referenceTo>Provider_Type__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>