force-app/main/default/objects/Entity__c/fields/TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>TAX_ID__c</fullName>
    <label>TAX ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>